--- a/notes/stories.org
+++ b/notes/stories.org
@@ -42,7 +42,11 @@
 ** Move main to App::Pebble
 ** use $pebble by default in table renderer
 ** Lexical vars for each attribute
-** Does the control ones need stringification?
+** DONE Does the control ones need stringification?
+*** no
+*** 
+** collect_pool
+*** pool, but collects all the items and pass the whole lot to a single post sub
 ** psort
 *** return new IO stream
 ** p -m --Match --has=abc,def,ghi or named captures
