--- a/notes/stories.org
+++ b/notes/stories.org
@@ -44,6 +44,9 @@
 *** no
 *** 
 ** DONE plimit
+** differentiate between p and pmap
+*** p always returns the object
+*** pmap might be used to return a different type of object or string
 ** debug flag
 ** Lexical vars for each attribute
 ** psort
