--- a/notes/stories.org
+++ b/notes/stories.org
@@ -67,6 +67,10 @@
 *** can be reset for all, or for a type e.g. Web
 ** Lexical vars for each attribute
 ** psort
+** CLI
+*** Call with script file or source
+*** Call with parameters which are available inside
+**** S->CLI->param( "name" );
 ** collect_pool
 *** pool, but collects all the items and pass the whole lot to a single post sub
 ** psort
