--- a/notes/stories.org
+++ b/notes/stories.org
@@ -71,7 +71,7 @@
 *** DONE Nope, instead use o { } to always return object
 *** p always returns the object
 *** pmap might be used to return a different type of object or string
-** Try out another method thingy
+** DONE Try out another method thingy
 *** Bench
 **** time cat temp/kernel.log | perl bin/pebble.pl test/kernel_log.pbl
 *** use MooseX::Method::Signatures;
@@ -80,6 +80,9 @@
 **** 6s
 *** Method::Signatures in Pebble::Object
 **** 4s
+** TODO Plugins
+*** Load plugins on demand
+** Replace Graph with Chart
 ** debug flag
 ** Log stuff
 ** Unify the R->, S-> etc
