--- a/source/Changes
+++ b/source/Changes
@@ -2,7 +2,7 @@ Revision history for App-Pebble
 
 {{$NEXT}}
 
-* --verbosity command line option
+* --verbose command line option
 
 
 0.008 -- 2011-02-01 00:14:31 UTC
