--- a/source/Changes
+++ b/source/Changes
@@ -9,7 +9,10 @@ Revision history for App-Pebble
 * Always render table as Ascii table, even if not interactive
   (otherwise you can't pipe it to "less -S").
 
+* App::Pebble::Plugin::Source::Statistics - (needs better name? Stat::Basic?)
+  ->percent_of()
 
+  
 0.008 -- 2011-02-01 00:14:31 UTC
 
 * Logging
